Added reading datasets

--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -27,13 +27,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. Named Entity Recognition (NER)\n",
+        "2. POS\n",
+        "3. TF-IDF?\n",
+        "4. Stemming (Bad) or Lemmatization (Better)\n",
+        "5. Word Embedding\n",
+        "6. Tokenization (Non Transformer Models)"
+      ],
+      "metadata": {
+        "id": "wFw6T2VC_FTH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import all the necessary libraries\n",
+        "\n",
+        "from datasets import load_dataset"
+      ],
+      "metadata": {
+        "id": "lIbvayoD_T0a"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Load Datasets"
+      ],
+      "metadata": {
+        "id": "rrP04RMf_Zjm"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "K4NRlWdlC83w"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Huggingface Datasets\n",
+        "dataset1 = load_dataset(\"Jean-Baptiste/financial_news_sentiment\")\n",
+        "dataset2 = load_dataset(\"zeroshot/twitter-financial-news-sentiment\")\n",
+        "dataset3 = load_dataset(\"lukecarlate/general_financial_news\")\n",
+        "\n",
+        "# Normal Datasets"
+      ]
     },
     {
       "cell_type": "markdown",
