Added TF-IDF template

--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -364,16 +363,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ChavChavC/BT4222/blob/main/Feature_Engineering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "1. Named Entity Recognition (NER)\n",
         "2. POS\n",
@@ -408,7 +397,7 @@
         },
         "outputId": "09e4e97e-9ed5-402f-82a0-070911c163be"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -442,7 +431,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "id": "K4NRlWdlC83w"
       },
@@ -489,7 +478,7 @@
       "metadata": {
         "id": "AA6P_6prAg84"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -515,7 +504,7 @@
       "metadata": {
         "id": "IuaUY3_BOrFo"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,7 +528,7 @@
         "id": "3OHoeTUOPd6J",
         "outputId": "b8b513ec-46f1-4d41-a6c5-6b81251265c7"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +573,7 @@
       "metadata": {
         "id": "Xyob-oBqPJSL"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -627,7 +616,7 @@
         "id": "jkOAh9f7R8ma",
         "outputId": "dfdb449a-fe64-4a9a-b138-c0461d4e5d04"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -657,7 +646,21 @@
     {
       "cell_type": "code",
       "source": [
-        "##Dataset1 -"
+        "##Dataset1 -\n",
+        "\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "\n",
+        "# Assuming you have a list of sentences as your data\n",
+        "sentences = [\"The cats are playing in the garden\",\n",
+        "             \"The sun is shining brightly over the garden\",\n",
+        "             # ... more sentences ...\n",
+        "            ]\n",
+        "\n",
+        "# Initialize the TfidfVectorizer\n",
+        "tfidf_vectorizer = TfidfVectorizer()\n",
+        "\n",
+        "# Fit and transform the entire dataset to TF-IDF vectors\n",
+        "tfidf_matrix = tfidf_vectorizer.fit_transform(sentences)\n"
       ],
       "metadata": {
         "id": "9kfXAx6QTFtI"
