Added NER function

--- a/Feature_Engineering.ipynb
+++ b/Feature_Engineering.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -363,6 +364,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ChavChavC/BT4222/blob/main/Feature_Engineering.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "1. Named Entity Recognition (NER)\n",
         "2. POS\n",
@@ -387,8 +398,7 @@
         "from nltk.stem import PorterStemmer\n",
         "from nltk.tokenize import word_tokenize\n",
         "nltk.download('punkt')\n",
-        "nltk.download('wordnet')\n",
-        "\n"
+        "nltk.download('wordnet')"
       ],
       "metadata": {
         "id": "lIbvayoD_T0a",
@@ -503,6 +513,35 @@
       ],
       "metadata": {
         "id": "IuaUY3_BOrFo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Named Entity Recognition"
+      ],
+      "metadata": {
+        "id": "nofUPtBG0GkR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import spacy\n",
+        "\n",
+        "# Load spaCy language model\n",
+        "nlp = spacy.load(\"en_core_web_sm\")\n",
+        "# Preprocess text and perform NER\n",
+        "def perform_ner(text):\n",
+        "    doc = nlp(text)\n",
+        "    entities = [(ent.text, ent.label_) for ent in doc.ents]\n",
+        "    return entities"
+      ],
+      "metadata": {
+        "id": "JYQFLhJD0VyG"
       },
       "execution_count": null,
       "outputs": []
