--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -4,6 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -277,7 +278,7 @@
       "metadata": {
         "id": "j0kdOLlUm-UD"
       },
-      "execution_count": 77,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -289,7 +290,7 @@
       "metadata": {
         "id": "m5mQjx9UXqXU"
       },
-      "execution_count": 78,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -303,20 +304,20 @@
       "metadata": {
         "id": "ipe3yiCzYRba"
       },
-      "execution_count": 93,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "#remove symbols\n",
-        "symbol_pattern = r'[!@#%^&*()_+{}\\[\\]:;\"\\'<>,.?\\\\|\\\\/`~]'\n",
+        "symbol_pattern = r'[!@#%^&*()_+{}\\[\\]:;\"\\'<>,.?\\\\|\\\\/`~0-9]'\n",
         "data['title'] = data['title'].str.replace(symbol_pattern, '', regex=True)"
       ],
       "metadata": {
         "id": "KXQr-iB5ZTGq"
       },
-      "execution_count": 94,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -331,9 +332,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
-        "outputId": "482f28ea-ea47-4490-afae-2be7834829b8"
+        "outputId": "397b8f9e-963c-4c27-de15-04dd636cd506"
       },
-      "execution_count": 95,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +343,7 @@
               "                                                   title  labels\n",
               "0      Gildan Activewear Reports Strong Results for t...       2\n",
               "1      TRILLION ENERGY ANNOUNCES FLOW TEST RESULTS FO...       2\n",
-              "2            CAPREIT Announces October 2022 Distribution       1\n",
+              "2                CAPREIT Announces October  Distribution       1\n",
               "3      Unigold Inc Delivers Positive Feasibility Stud...       2\n",
               "4      Wallbridge Provides Update on Archer Explorati...       1\n",
               "...                                                  ...     ...\n",
@@ -356,7 +357,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-dda5079d-f8b0-43e8-b912-479f6cea090f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d61325f0-4851-40a0-8064-60368a161e2d\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -392,7 +393,7 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>CAPREIT Announces October 2022 Distribution</td>\n",
+              "      <td>CAPREIT Announces October  Distribution</td>\n",
               "      <td>1</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -442,7 +443,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dda5079d-f8b0-43e8-b912-479f6cea090f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d61325f0-4851-40a0-8064-60368a161e2d')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -494,12 +495,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-dda5079d-f8b0-43e8-b912-479f6cea090f button.colab-df-convert');\n",
+              "        document.querySelector('#df-d61325f0-4851-40a0-8064-60368a161e2d button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-dda5079d-f8b0-43e8-b912-479f6cea090f');\n",
+              "        const element = document.querySelector('#df-d61325f0-4851-40a0-8064-60368a161e2d');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -519,8 +520,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6cc18b52-c85c-4337-9280-0cd940943943\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6cc18b52-c85c-4337-9280-0cd940943943')\"\n",
+              "<div id=\"df-0284d841-20a3-4add-9a18-8f729a267176\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-0284d841-20a3-4add-9a18-8f729a267176')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -639,7 +640,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6cc18b52-c85c-4337-9280-0cd940943943 button');\n",
+              "        document.querySelector('#df-0284d841-20a3-4add-9a18-8f729a267176 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -650,15 +651,26 @@
             ]
           },
           "metadata": {},
-          "execution_count": 95
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# data.to_csv('data.csv')"
+      ],
       "metadata": {
         "id": "S0LtbYzRfnrg"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XPrn2zqaeDkS"
       },
       "execution_count": null,
       "outputs": []
